Moved some configuration to environment variable.

--- a/.env-example
+++ b/.env-example
@@ -1,5 +1,9 @@
 REACT_APP_remoteHost=https://[domain name]/
 
+REACT_APP_review_source=thank2u.com
+REACT_APP_giftcard_amount=10
+REACT_APP_contact_email=info@thank2u.com
+
 REACT_APP_firebase_apiKey=
 REACT_APP_firebase_authDomain=
 REACT_APP_firebase_databaseURL=
