--- a/package.json
+++ b/package.json
@@ -68,6 +68,8 @@
     "react-modal-image": "^2.5.0",
     "react-overflow": "^0.2.1",
     "react-redux": "^7.1.3",
+    "redux": "^4.0.4",
+    "redux-thunk": "^2.3.0",
     "react-responsive-decorator": "0.0.1",
     "resolve": "1.12.0",
     "resolve-url-loader": "3.1.0",
